k8s/analytics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  labels:
    app: analytics-service
spec:
  selector:
    app: analytics-service
  ports:
    - name: http          
      port: 8000
      targetPort: 8000
  type: NodePort
